Added Tomcat Setting 64-bit mode to Java VM in EnterMedia Install Script